k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-order
      app.kubernetes.io/component: kafka
  template:
    metadata:
      labels:
        app.kubernetes.io/name: food-order
        app.kubernetes.io/component: kafka
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.15
          imagePullPolicy: IfNotPresent
          ports:
            - name: kafka
              containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: kafka
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: kafka
