k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-order
      app.kubernetes.io/component: order-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: food-order
        app.kubernetes.io/component: order-service
    spec:
      containers:
        - name: order-service
          image: huongskc/food-order-order-service:v1
          imagePullPolicy: Always
          ports:
            - name: order-service
              containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: order-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: order-service
  ports:
    - name: order-service
      port: 8083
      targetPort: order-service
