k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-order
      app.kubernetes.io/component: redis
  template:
    metadata: 
      labels:
        app.kubernetes.io/name: food-order
        app.kubernetes.io/component: redis  
    spec:
      containers:
        - name: redis
          image: redis:6.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
