k8s/restaurant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-order
      app.kubernetes.io/component: restaurant-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: food-order
        app.kubernetes.io/component: restaurant-service
    spec:
      containers:
        - name: restaurant-service
          image: huongskc/food-order-restaurant-service:v1
          imagePullPolicy: Always
          ports:
            - name: restaurant
              containerPort: 8082
          volumeMounts:
            - name: restaurant-uploads
              mountPath: /app/src/main/resources/uploads
      volumes:
        - name: restaurant-uploads
          persistentVolumeClaim:
            claimName: restaurant-upload-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: restaurant-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: restaurant-service
  ports:
    - name: restaurant
      port: 8082
      targetPort: restaurant
