k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-order
      app.kubernetes.io/component: user-service
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: food-order
        app.kubernetes.io/component: user-service
    spec:
      containers:
        - name: user-service
          image: huongskc/food-order-user-service:v1
          imagePullPolicy: Always # Always pull the image to ensure the latest version is used
          ports:
            - name: user-service
              containerPort: 8081
          volumeMounts:
            - name: user-uploads
              mountPath: /app/src/main/resources/uploads
      volumes:
        - name: user-uploads
          persistentVolumeClaim:
            claimName: user-upload-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: user-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: user-service
  ports:
    - name: user-service  
      port: 8081
      targetPort: user-service
