k8s/zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-order
      app.kubernetes.io/component: zookeeper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: food-order
        app.kubernetes.io/component: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: zookeeper:3.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: zookeeper
              containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: food-order
  labels:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: zookeeper
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: food-order
    app.kubernetes.io/component: zookeeper
  ports:
    - name: zookeeper
      port: 2181
      targetPort: zookeeper
